fix: list spacing

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -313,8 +313,13 @@ ul, ol {
 }
 
 li {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.link__list li {
   margin-top: .375rem;
-  margin-bottom: .5rem;
+  margin-bottom: .375rem;
 }
 
 .link__list,
